# replicant-network-monorepo

./: .gitignore  .lintstagedrc  LICENSE  README.md  TECHNICAL.md  biome.json  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml  sync.yml
apps/ai-manager/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  celery_worker.py  docker-compose.yml  fly.toml  package.json  pyproject.toml  pytest.ini  run_worker.sh  test.py  test.ts
apps/ai-manager/benchmarking/: k6.ts
apps/ai-manager/src/: main.py  test_api.py
apps/ai-manager/src/core/: auth.py  celery_app.py  device.py  model_client.py  model_registry.py  models.py  supabase.py
apps/ai-manager/src/models/: inference.py
apps/ai-manager/src/routes/v1/: __init__.py  health.py  inference.py  models.py
apps/ai-manager/src/tasks/: inference_tasks.py
apps/ai-manager/tests/: conftest.py
apps/ai-manager/tests/integration/: test_api_endpoints.py  test_model_endpoints.py
apps/ai-manager/tests/unit/: test_auth.py  test_device.py
apps/dapp/: .env.example  README.md  biome.json  codegen.ts  components.json  eslint.config.mjs  next.config.ts  package.json  tsconfig.json  wagmi.config.ts
apps/dapp_old/: package.json
apps/envio/: .gitignore  README.md  config.yaml  package.json  pnpm-lock.yaml  schema.graphql
configs/: biome.json
contracts/: .lintstagedrc  DEPLOYMENTS.md  README.md  foundry.toml  package.json
contracts/script/: RepNetManager.s.sol
contracts/src/: DataTypes.sol  ERC20Factory.sol  ModelToken.sol  ModelTokenERC20.sol  (+1 more)
(+228 files in other folders)
